@@ -10,6 +10,7 @@ import org.leavesmc.leaves.command.CommandArgumentResult;
 import org.leavesmc.leaves.command.CommandArgumentType;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.function.Supplier;
 
 public abstract class AbstractTimerAction<E extends AbstractTimerAction<E>> extends AbstractBotAction<E> {
@@ -22,11 +23,11 @@ public abstract class AbstractTimerAction<E extends AbstractTimerAction<E>> exte
         super(name, argument, creator);
         this.setSuggestion(0, Pair.of(Collections.singletonList("0"), "[TickDelay]"));
         this.setSuggestion(1, Pair.of(Collections.singletonList("20"), "[TickInterval]"));
-        this.setSuggestion(2, Pair.of(Collections.singletonList("-1"), "[DoNumber]"));
+        this.setSuggestion(2, Pair.of(List.of("1", "-1"), "[DoNumber]"));
     }
 
     @Override
     public void loadCommand(@Nullable ServerPlayer player, @NotNull CommandArgumentResult result) {
-        this.setInitialTickDelay(result.readInt(0)).setInitialTickInterval(result.readInt(20)).setInitialNumber(result.readInt(-1));
+        this.setInitialTickDelay(result.readInt(0)).setInitialTickInterval(result.readInt(20)).setInitialNumber(result.readInt(1));
     }
 }
